# jbrotli

./: .gitignore  CHANGELOG.md  CMakeLists.txt  HOWTO-BUILD.md  README.md  pipeline.yml  pom.xml
jbrotli/: pom.xml
jbrotli-examples/: pom.xml
jbrotli-examples/dropwizard/: pom.xml
jbrotli-examples/dropwizard/src/main/resources/: hello_brotli.yml
jbrotli-examples/dropwizard/src/main/resources/public/: index.html
jbrotli-examples/http-client/: pom.xml
jbrotli-examples/httpcomponents-client/: pom.xml
jbrotli-examples/httpcomponents-client/src/test/resources/: testserver.yml
jbrotli-examples/simple-web-app/: pom.xml
jbrotli-examples/spring-boot/: pom.xml
jbrotli-native/: pom.xml
jbrotli-native/darwin/: build.sh  pom.xml
jbrotli-native/darwin-x86-amd64/: build.sh  pom.xml
jbrotli-native/linux-arm32-vfp-hflt/: build-cross-compile-on-linux-x86-amd64.sh  build-linux-armhf.sh  build-native-linux-armhf.sh  pom.xml  toolchain-linux-armhf.cmake.txt
jbrotli-native/linux-x86/: pom.xml
jbrotli-native/linux-x86-64/: build.sh  pom.xml
jbrotli-native/linux-x86-amd64/: build.sh  pom.xml
jbrotli-native/src/main/cpp/: com_meteogroup_jbrotli_BrotliCompressor.cxx  com_meteogroup_jbrotli_BrotliCompressor.h  com_meteogroup_jbrotli_BrotliDeCompressor.cxx  com_meteogroup_jbrotli_BrotliDeCompressor.h  com_meteogroup_jbrotli_BrotliError.h  com_meteogroup_jbrotli_BrotliStreamCompressor.cxx  com_meteogroup_jbrotli_BrotliStreamCompressor.h  com_meteogroup_jbrotli_BrotliStreamDeCompressor.cxx  com_meteogroup_jbrotli_BrotliStreamDeCompressor.h  org_meteogroup_jbrotli_BrotliCompressor.cxx  org_meteogroup_jbrotli_BrotliCompressor.h  org_meteogroup_jbrotli_BrotliDeCompressor.cxx  org_meteogroup_jbrotli_BrotliDeCompressor.h  org_meteogroup_jbrotli_BrotliError.h  org_meteogroup_jbrotli_BrotliStreamCompressor.cxx  org_meteogroup_jbrotli_BrotliStreamCompressor.h  org_meteogroup_jbrotli_BrotliStreamDeCompressor.cxx  org_meteogroup_jbrotli_BrotliStreamDeCompressor.h  org_meteogroup_jbrotli_BrotliStreamEncoder.cxx  org_meteogroup_jbrotli_BrotliStreamEncoder.h  param_converter.cxx  param_converter.h  type_converters.h
jbrotli-native/win32-x86/: build.bat  pom.xml
jbrotli-native/win32-x86-64/: pom.xml
jbrotli-native/win32-x86-amd64/: build.bat  pom.xml
jbrotli-performance/: pom.xml
jbrotli-performance/src/main/java/com/meteogroup/jbrotli/performance/: Brotli_vs_Gzip_Benchmark.java
jbrotli-performance/src/main/java/org/meteogroup/jbrotli/performance/: Brotli_vs_Gzip_Benchmark.java
jbrotli-servlet/: pom.xml
jbrotli-servlet-examples/: pom.xml
jbrotli-servlet-examples/dropwizard/: pom.xml
jbrotli-servlet-examples/httpcomponents-client/: pom.xml
jbrotli-servlet-examples/simple-web-app/: pom.xml
jbrotli-servlet-examples/simple-web-app/src/main/webapp/WEB-INF/: web.xml
jbrotli-servlet-examples/spring-boot/: pom.xml
jbrotli-servlet/src/main/java/org/meteogroup/jbrotli/servlet/: BrotliServletFilter.java  BrotliServletOutputStream.java  BrotliServletResponseWrapper.java  HttpAcceptEncodingParser.java
jbrotli-servlet/src/test/java/org/meteogroup/jbrotli/servlet/: BrotliServletFilterTest.java  BrotliServletOutputStreamTest.java  BrotliServletResponseWrapperTest.java  HttpAcceptEncodingParserTest.java
jbrotli/src/main/java/com/meteogroup/jbrotli/: Brotli.java  BrotliCompressor.java  BrotliDeCompressor.java  BrotliError.java  BrotliErrorChecker.java  BrotliException.java  BrotliInputStream.java  BrotliOutputStream.java  BrotliStreamCompressor.java  BrotliStreamDeCompressor.java
jbrotli/src/main/java/com/meteogroup/jbrotli/performance/: Brotli_vs_Gzip_Benchmark.java
jbrotli/src/main/java/org/meteogroup/jbrotli/: Brotli.java  BrotliCompressor.java  BrotliDeCompressor.java  BrotliError.java  BrotliErrorChecker.java  BrotliException.java  BrotliInputStream.java  BrotliOutputStream.java  BrotliStreamCompressor.java  BrotliStreamDeCompressor.java  BrotliStreamDeCompressorResult.java  BrotliStreamEncoder.java  DeCompressorResult.java  NativeDeCompressorResult.java
jbrotli/src/main/java/org/meteogroup/jbrotli/io/: BrotliInputStream.java  BrotliOutputStream.java
jbrotli/src/main/java/org/meteogroup/jbrotli/libloader/: ARCH.java  BrotliLibraryLoader.java  LibraryLoader.java  LoaderResult.java  OS.java
jbrotli/src/test/java/com/meteogroup/jbrotli/: BrotliCompressorExtremeTest.java  BrotliCompressorTest.java  BrotliDeCompressorTest.java  BrotliErrorCheckerTest.java  BrotliExampleTest.java  BrotliInputStreamTest.java  BrotliOutputStreamTest.java  BrotliStreamCompressorByteArrayTest.java  BrotliStreamCompressorByteBufferTest.java  BrotliStreamCompressorInitAndCloseTest.java  BrotliStreamDeCompressorByteArrayTest.java  BrotliStreamDeCompressorByteBufferTest.java  BrotliStreamDeCompressorInitAndCloseTest.java  BufferTestHelper.java
jbrotli/src/test/java/com/meteogroup/jbrotli/playground/: TestSingleFileCompression.java
jbrotli/src/test/java/org/meteogroup/jbrotli/: BrotliCompressorExtremeTest.java  BrotliCompressorTest.java  BrotliDeCompressorTest.java  BrotliErrorCheckerTest.java  BrotliExampleTest.java  BrotliInputStreamTest.java  BrotliOutputStreamTest.java  BrotliStreamCompressorByteArrayTest.java  BrotliStreamCompressorByteBufferTest.java  BrotliStreamCompressorInitAndCloseTest.java  BrotliStreamDeCompressorByteArrayTest.java  BrotliStreamDeCompressorByteBufferTest.java  BrotliStreamDeCompressorInitAndCloseTest.java  BrotliStreamEncoderTest.java  BufferTestHelper.java
jbrotli/src/test/java/org/meteogroup/jbrotli/io/: BrotliInputStreamTest.java  BrotliOutputStreamTest.java
jbrotli/src/test/java/org/meteogroup/jbrotli/libloader/: BrotliLibraryLoaderTest.java
pipeline-tasks/: maven-package-jbrotli-native-linux-arm32-vfp-hflt.sh  maven-package-jbrotli-native-linux-arm32-vfp-hflt.yml  maven-package-jbrotli-native-linux-x86-amd64.sh  maven-package-jbrotli-native-linux-x86-amd64.yml  maven-package-jbrotli-native-win32-x86-amd64.bat  maven-package-jbrotli-native-win32-x86-amd64.sh  maven-package-jbrotli-native-win32-x86-amd64.yml
(+30 files in other folders)
